<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:paddingLeft="8dp">

        <!--Put form controls here-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_shroomspot_title"
            android:textSize="24dp"
            android:layout_marginBottom="8dp"
            style="?android:listSeparatorTextViewStyle"/>
        <TextView
            android:id="@+id/title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_title_label"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/new_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_title_help"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:id="@+id/svampsort_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_type_label"
            android:textSize="20dp"/>
        <Spinner
            android:id="@+id/new_svampsort_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/svamplista"
            android:layout_marginBottom="16dp">
        </Spinner>
        <TextView
            android:id="@+id/description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_description_label"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/new_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="3"
            android:hint="@string/new_description_help"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:id="@+id/new_position_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_position_label"
            android:textSize="20dp"/>
        <Button
            android:id="@+id/use_my_pos_imput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_my_pos"/>
        <Button
            android:id="@+id/set_pos_with_map_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_pos_on_map"/>
    </LinearLayout>
</ScrollView>